Change log for gfsm

v0.0.9 Fri, 23 Feb 2007 18:38:36 +0100
   + fixed nasty bug in gfsm_alphabet_load_handle() and gfsmio_getc() causing
     char decimal 255 to return as EOF

v0.0.8 Thu, 15 Feb 2007 12:05:41 +0100
   + updated build system to build more cleanly on non-development systems
     - e.g. missing optgen.perl, flex, bison, pod2x, perl, etc.
   + added gfsm.magic snippet for /etc/magic
     - added 'install-magic' and 'uninstall-magic' targets for
       manual magic maintainance, since there seems to be no good and safe
       way to do this automagically (ugh)...
   + added support for final weights
   + changed binary format (backwards-compatible with dispatch function)
   + added final-weight operations final_weight_(plus|times)()
   + added optional(), replace(), insert_automaton()
   + added lookup_viterbi(), viterbi_trellis_paths(), viterbi_trellis_bestpath()
   + fixed a bug in gfsm_automaton_renumber_states()
   + fixed a really stupid bug in gfsm_arclist_insert_link() for sorted insertion
   + fixed some bugs in gfsm_automaton_rmepsilon()
   + fixed an epsilon-related bug in compose() and intersect()
   + fixed another epsilon-related bug in compose()
     - implemented algorithm from:
	  Mohri, Pereira, & Riley (1996), "Weighted Automata in Text and Speech
	  Processing", Proc. ECAI '96, John Wiley & Sons, Ltd.
     - calling conventions changed for compose_full()
   + added gfsmScanner.[ch], gfsmRegexCompiler.[ch]
   + added gfsmTrie, (quasi-)deterministic input acceptor (i/o pairs)
     - currently geared towards storing frequencies
   + added gfsmIO.[ch] : abstract I/O layer
     - includes basic zlib compression support
     - currently used only for text & binary automaton I/O, also text alphabet I/O
     - TODO: use I/O layer for alphabet draw methods?  regex compiler?
   + added gnulib code for vasprintf(), getdelim()
     - removed old gfsmCompat.h hack

v0.0.7 Sun, 20 Nov 2005 14:39:33 +0100