@@ -3,6 +3,8 @@ Change log for gfsm
 v0.0.9 Fri, 23 Feb 2007 18:38:36 +0100
    + fixed nasty bug in gfsm_alphabet_load_handle() and gfsmio_getc() causing
      char decimal 255 to return as EOF
+   + decomposed compose_prepare() into compose_prepare_fsm1(), compose_prepare_fsm2()
+     - should make it easier to hack a cascade implementation
 
 v0.0.8 Thu, 15 Feb 2007 12:05:41 +0100
    + updated build system to build more cleanly on non-development systems
